Report now contains discussion on Clustering.

--- a/report/root.bib
+++ b/report/root.bib
@@ -57,8 +57,90 @@
 % encounters full names.
  
  
- 
- 
+@misc{Software:Redis,
+  title         = "Redis",
+  url           = "https://redis.io/",
+  month         = jul,
+  year          = "2017"
+}
+
+@misc{Software:RedditArchive,
+  author        = "Jason Baumgartner",
+  title         = "Directory Contents",
+  url           = "https://files.pushshift.io/reddit/"
+}
+
+@misc{Software:Mine,
+  author        = "Rollen D'Souza",
+  title         = "rollends/red-prism",
+  url           = "https://github.com/rollends/red-prism"
+}
+
+@electronic{Website:GooseTattoo,
+  author        = "\texttt{/u/SsseCn8jx}",
+  title         = "Fuck it, if this post receives 2000 upvotes I will tattoo a goose on my ass.",
+  url           = "https://www.reddit.com/r/uwaterloo/comments/5ibr95"
+}
+
+@article{Article:CholeskyLaplacian,
+  author        = "Katrijn Frederix and Marc Van Barel",
+  title         = "Sparse spectral clustering method based on the incomplete Cholesky decomposition.",
+  journal       = "Journal of Computational and Applied Mathematics",
+  year          = "2012",
+  month         = jan,
+  url           = "doi:10.1016/j.cam.2012.07.019"
+}
+
+@book{Notes:Network,
+  author        = "Francesco Bullo",
+  title         = "Lectures on Network Systems.",
+  edition       = {1},
+  year          = {2018},
+  publisher     = {CreateSpace},
+  url           = "http://motion.me.ucsb.edu/book-lns"
+}
+
+@article{Article:Survey,
+  author        = {Mariá C.V. Nascimento and André C.P.L.F. de Carvalho},
+  title         = {Spectral methods for graph clustering – A survey},
+  journal       = {European Journal of Operational Research},
+  year          = {2011},
+  pages         = {221--231},
+  url           = {doi:10.1016/j.ejor.2010.08.012}
+}
+
+
+@misc{Notes:Laplacian,
+  author        = "Radu Horaud",
+  title         = "A Short Tutorial on Graph Laplacians, Laplacian Embedding, and Spectral Clustering.",
+  url           = "https://csustan.csustan.edu/~tom/Clustering/GraphLaplacian-tutorial.pdf"
+}
+
+@article{Article:LaplacianTutorial,
+  author        = "Ulrike von Luxburg",
+  title         = "A Tutorial on Spectral Clustering.",
+  publisher     = {Springer},
+  journal       = {Statistics and Computing},
+  volume        = {17},
+  number        = {4},
+  year          = {2007}
+}
+
+
+% a book
+% From the May 2002 issue of "IEEE Transactions on Magnetics",
+% page 1466, reference #4.
+@book{IEEEexample:book_typical,
+  author        = "B. D. Cullity",
+  title         = "Introduction to Magnetic Materials",
+  publisher     = "Addison-Wesley",
+  address       = "Reading, MA",
+  year          = "1972"
+};
+
+
+
+
 % references for the IEEEtran.bst documentation
 % the distribution site for IEEEtran.bst
 @electronic{IEEEexample:shellCTANpage,
