Started working on Analysis.

--- a/report/root.bib
+++ b/report/root.bib
@@ -82,6 +82,13 @@
   url           = "https://www.reddit.com/r/uwaterloo/comments/5ibr95"
 }
 
+@electronic{Website:dtompkins,
+  author        = "\texttt{/u/[deleted]}",
+  title         = "Dave Tompkins is overrated.",
+  url           = "https://www.reddit.com/r/uwaterloo/comments/7w0dgv/"
+}
+
+
 @article{Article:CholeskyLaplacian,
   author        = "Katrijn Frederix and Marc Van Barel",
   title         = "Sparse spectral clustering method based on the incomplete Cholesky decomposition.",
